fix: improved left spacing

--- a/src/css/components-left.css
+++ b/src/css/components-left.css
@@ -23,7 +23,8 @@
     .header {
       margin-top: 0;
       position: fixed;
-      width: 16rem;
+      inline-size: 16rem;
+      padding-inline: var(--medium-bp-inline-spacing);
       top: 50%;
       transform: translateY(-50%);
     }
@@ -38,6 +39,7 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 2.5rem;
     line-height: 50px;
+    overflow-wrap: break-word;
     background-clip: text;
     color: transparent;
     background-image: linear-gradient(var(--hero-text-gradient));
